Played briefly with error tooltip more. Couldn't fix z-index, so moved it to display only left for now to handle the issue.

--- a/src/components/distributions/editor/style.css
+++ b/src/components/distributions/editor/style.css
@@ -10,6 +10,7 @@
   padding: 4px 13px;
   border-radius: 2px;
   transition: none;
+  z-index: 10000000 !important;
 }
 
 .Guesstimate .TextInput {
